feat: Initialize mobile application with core navigation, Redux authentication, Firebase configuration, and updated app icon assets.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,17 +2,15 @@
 require Pod::Executable.execute_command('node', ['-p',
   'require.resolve(
     "react-native/scripts/react_native_pods.rb",
-    {paths: [process.argv[1]]},
+    {paths: [process.argv[1], process.argv[1] + "/../../node_modules", process.argv[1] + "/../../../node_modules"]},
   )', __dir__]).strip
 
 platform :ios, min_ios_version_supported
 prepare_react_native_project!
 
-linkage = ENV['USE_FRAMEWORKS']
-if linkage != nil
-  Pod::UI.puts "Configuring Pod with #{linkage}ally linked Frameworks".green
-  use_frameworks! :linkage => linkage.to_sym
-end
+# Firebase requires frameworks mode for proper Swift header generation.
+# Using static linkage to keep binary size smaller.
+use_frameworks! :linkage => :static
 
 target 'mobile' do
   config = use_native_modules!
