refactor: rename mobile application project from 'mobile' to 'BookChallenge' across iOS and Android. + google-services.json ios/android

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@book-challenge/mobile",
+  "name": "@book-challenge/bookchallenge",
   "version": "0.0.1",
   "private": true,
   "scripts": {
