--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,7 +12,7 @@ prepare_react_native_project!
 # Using static linkage to keep binary size smaller.
 use_frameworks! :linkage => :static
 
-target 'mobile' do
+target 'BookChallenge' do
   config = use_native_modules!
 
   use_react_native!(
