--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@react-native-firebase/functions": "^23.8.6",
     "@react-native-firebase/storage": "^23.8.6",
     "@react-native/new-app-screen": "0.83.1",
+    "@react-navigation/bottom-tabs": "^7.15.2",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
     "@reduxjs/toolkit": "^2.11.2",
+    "lucide-react-native": "^0.575.0",
     "react": "19.2.0",
     "react-native": "0.83.1",
     "react-native-device-info": "^15.0.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.23.0",
+    "react-native-svg": "^15.15.3",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
